--- a/MemWord/writesentencewidget.ui
+++ b/MemWord/writesentencewidget.ui
@@ -26,14 +26,14 @@
     <item row="0" column="1">
      <widget class="QTextEdit" name="referencelist"/>
     </item>
-    <item row="1" column="1" colspan="2">
-     <widget class="QTextEdit" name="textEdit"/>
-    </item>
     <item row="0" column="2">
      <widget class="QTextEdit" name="note"/>
     </item>
     <item row="0" column="0" rowspan="2">
      <widget class="QTableWidget" name="wordlist"/>
+    </item>
+    <item row="1" column="1" colspan="2">
+     <widget class="QWidget" name="writesentence" native="true"/>
     </item>
    </layout>
   </widget>
